2011-10-04  Joshua Bell  <jsbell@chromium.org>

        IndexedDB add() should fail if key is NaN
        https://bugs.webkit.org/show_bug.cgi?id=62286

        Reviewed by Tony Chang.

        Tests for NaN and other invalid IndexedDB keys.

        * storage/indexeddb/invalid-keys-expected.txt: Added.
        * storage/indexeddb/invalid-keys.html: Added.

2011-10-04  Young Han Lee  <joybro201@gmail.com>

        HTML canvas strokes with dash and dashOffset
        https://bugs.webkit.org/show_bug.cgi?id=63933

        Reviewed by Simon Fraser.

        Add webkitLineDash and webkitLineDashOffset attributes to CanvasRenderingContext2D for JSC.
        These attributes can be used to determine the dash-style of stroke in HTML Canvas.

        As this kind of attributes are not specified in the HTML Canvas specification yet,
        the 'webkit' prefix is added to its names.

        Mozilla already implemented these attributes, mozDash and mozDashOffset [1], and this patch
        is created by referring to the implementation. This patch is basically using the specified
        behavior of stroke-dasharray and stroke-dashoffset in the SVG specification [2], except
        that doesn't support units or percentages, just floating point numbers.

        [1] https://bugzilla.mozilla.org/show_bug.cgi?id=662038
        [2] http://www.w3.org/TR/SVG/painting.html#StrokeProperties

        * fast/canvas/canvas-webkitLineDash-expected.txt: Added.
        * fast/canvas/canvas-webkitLineDash-invalid-expected.txt: Added.
        * fast/canvas/canvas-webkitLineDash-invalid.html: Added.
        * fast/canvas/canvas-webkitLineDash.html: Added.
        * fast/canvas/script-tests/canvas-webkitLineDash-invalid.js: Added.
        (trySettingLineDash):
        (trySettingLineDashOffset):
        * fast/canvas/script-tests/canvas-webkitLineDash.js: Added.
        * platform/chromium/test_expectations.txt:

2011-10-04  Tim Horton  <timothy_horton@apple.com>
