@@ -1,3 +1,15 @@
+2011-09-21  Cris Neckar  <cdn@chromium.org>
+
+        Hold refptr to identified previous sibling within findPlaceForCounter.
+        https://bugs.webkit.org/show_bug.cgi?id=68563
+
+        Reviewed by Adam Barth.
+
+        Test: fast/css/counters/counter-after-style-crash.html
+
+        * rendering/RenderCounter.cpp:
+        (WebCore::findPlaceForCounter):
+
 2011-10-04  Joshua Bell  <jsbell@chromium.org>
 
         IndexedDB add() should fail if key is NaN
