@@ -1,3 +1,13 @@
+2011-09-21  Cris Neckar  <cdn@chromium.org>
+
+        Add test for crash when performing rich text mutations with counter nodes.
+        https://bugs.webkit.org/show_bug.cgi?id=68563
+
+        Reviewed by Adam Barth.
+
+        * fast/css/counters/counter-after-style-crash-expected.txt: Added.
+        * fast/css/counters/counter-after-style-crash.html: Added.
+
 2011-10-04  Joshua Bell  <jsbell@chromium.org>
 
         IndexedDB add() should fail if key is NaN
